<resources>
    <string name="app_name">Popular Movies</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="title_activity_activity_details">Movie Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Label for preference-->
    <string name="pref_sortBy_label">Sort By</string>
    <string name="pref_imageResolution_label">Image Resolution</string>

    <!-- Label for options -->
    <string name="pref_sortBy_label_mostPopular">Most Popular</string>
    <string name="pref_sortBy_label_revenue">Revenue</string>
    <string name="pref_sortBy_label_highestRated">Highest Rated</string>
    <string name="pref_sortBy_label_favorite">Favorite</string>
    <string name="pref_Resolution_label_low">Low</string>
    <string name="pref_Resolution_label_medium">medium</string>
    <string name="pref_Resolution_label_high">High</string>

    <!-- Key name for Sort By preference in SharedPreferences -->
    <string name="pref_sortBy_key" translatable="false">sort_by</string>
    <string name="pref_resolution_key" translatable="false">res_sort</string>

    <!-- Value in SharedPreferences -->
    <string name="pref_sortBy_mostPopular" translatable="false">popularity.desc</string>
    <string name="pref_sortBy_revenue" translatable="false">revenue.desc</string>
    <string name="pref_sortBy_highestRated" translatable="false">vote_average.desc</string>
    <string name="pref_sortBy_favorite" translatable="false">favorite</string>
    <string name="pref_Res_low" translatable="false">low</string>
    <string name="pref_Res_medium" translatable="false">medium</string>
    <string name="pref_Res_high" translatable="false">high</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
