<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:title="@string/pref_sortBy_label"
        android:key="@string/pref_sortBy_key"
        android:defaultValue="@string/pref_sortBy_mostPopular"
        android:entryValues="@array/pref_sortBy_values"
        android:entries="@array/pref_sortBy_options" />

    <ListPreference
        android:title="@string/pref_imageResolution_label"
        android:key="@string/pref_resolution_key"
        android:defaultValue="@string/pref_Res_high"
        android:entryValues="@array/pref_Res_values"
        android:entries="@array/pref_Res_options" />

</PreferenceScreen>
